# bitcoinformats

./: .flake8  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
src/bitcoinformats/: address.py  bech32.py  bip32.py  network.py  opcodes.py  psbt.py  script_type.py  struct.py  transaction.py  utils.py
src/bitcoinformats/deconstruct/: __init__.py  adapters.py  arrays.py  exceptions.py  field_specifiers.py  fields.py  ints.py  structs.py  typing.py
src/bitcoinformats/digistruct/: __init__.py  arrays.py  base.py  bytesize.py  codecs.py  field_specifiers.py  fields.py  ints.py  structs.py
src/bitcoinformats/psbt/: __init__.py  _format.py  definitions.py  error.py  fields.py  psbt.py
src/microbitcoin/: base58.py  struct.py  transaction.py  utils.py  xpub.py
test/: test_bech32.py  test_bip32.py  test_script_types.py
tests/: test_bip32.py  test_deconstruct.py  test_psbt.py  test_script_types.py
